--- a/lizard_ui/static/lizard_ui/lizard-bootstrap.less
+++ b/lizard_ui/static/lizard_ui/lizard-bootstrap.less
@@ -392,7 +392,8 @@ ul.tree {
             outline: 1px solid #000;
         }
 
-        &.selected{
+        &.selected,
+        &.selected-invisible{
             background-color: #d9d9d6;
         }
     }
